[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_crawler"
version = "0.1.8"
description = "A new Python package named ai_crawler"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Dwight Beaver", email = "dsbeav@gmail.com"}]
dependencies = [
    "crawl4ai>=0.4.3b2",
    "pydantic",
    "redis",
    "setuptools"
]
requires-python = ">=3.9"

[project.scripts]
ai_crawler = "ai_crawler.cli:main"
